@@ -22,16 +22,14 @@ import java.text.DecimalFormat;
 import java.text.NumberFormat;
 import java.time.Instant;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 
-public class Vault extends BotCommand {
+public class Vault extends BotCommand<MessageEmbed> {
 
     private static final String controller = "0x64187ae08781b09368e6253f9e94951243a493d5";
 
     public static class VaultGreeks {
-        private final double fundingPeriod = 17.5/365;
         private final double ethUsd;
         private final double osqthUsd;
         private final double normFactor;
@@ -64,9 +62,10 @@ public class Vault extends BotCommand {
         public void setTheGreeks() {
             double deltaPerOsqth, gammaPerOsqth, vegaPerOsqth, thetaPerOsqth;
 
-            deltaPerOsqth = 2*normFactor*ethUsd*Math.exp(Math.pow(impliedVol, 2)*fundingPeriod)/10000;
-            gammaPerOsqth = 2*normFactor*Math.exp(Math.pow(impliedVol, 2)*fundingPeriod)/10000;
-            vegaPerOsqth = 2*impliedVol*fundingPeriod*osqthUsd;
+            double fundingPeriod = 17.5 / 365;
+            deltaPerOsqth = 2*normFactor*ethUsd*Math.exp(Math.pow(impliedVol, 2)* fundingPeriod)/10000;
+            gammaPerOsqth = 2*normFactor*Math.exp(Math.pow(impliedVol, 2)* fundingPeriod)/10000;
+            vegaPerOsqth = 2*impliedVol* fundingPeriod *osqthUsd;
             thetaPerOsqth = Math.pow(impliedVol, 2)*osqthUsd;
 
             delta = deltaPerOsqth*osqthHoldings+ethVaultCollateral;
@@ -77,13 +76,13 @@ public class Vault extends BotCommand {
     }
 
     // No hate to the Uniswap team, but holy shit how and why
-    public class Uniswapv3FuckYouMath {
+    public static class Uniswapv3FuckYouMath {
 
         private static final String addressTickMathExternal = "0x4d9d7F7aE80d51628Aa56eF37720718C99E6FDfC", addressSqrtPriceMathPartial = "0x9cf8dcbCf115B06d8f577E73Cb9EdFdb27828460";
 
-        public class Amount0Amount1 {
-            BigInteger amount0;
-            BigInteger amount1;
+        public static class Amount0Amount1 {
+            BigInteger amount0 = BigInteger.ZERO;
+            BigInteger amount1 = BigInteger.ZERO;
         }
 
         public BigInteger getAmount0Delta(
@@ -99,8 +98,9 @@ public class Vault extends BotCommand {
                             new Uint128(liquidity),
                             new Bool(roundUp)
                     ),
-                    Arrays.asList(
-                            new TypeReference<Uint256>() { }
+                    List.of(
+                            new TypeReference<Uint256>() {
+                            }
                     )
             );
 
@@ -122,8 +122,9 @@ public class Vault extends BotCommand {
                             new Uint128(liquidity),
                             new Bool(roundUp)
                     ),
-                    Arrays.asList(
-                            new TypeReference<Uint256>() { }
+                    List.of(
+                            new TypeReference<Uint256>() {
+                            }
                     )
             );
 
@@ -176,11 +177,12 @@ public class Vault extends BotCommand {
 
         private BigInteger call_getSqrtRatioAtTick(BigInteger tick) throws ExecutionException, InterruptedException {
             Function getSqrtRatioAtTick = new Function("getSqrtRatioAtTick",
-                    Arrays.asList(
+                    List.of(
                             new Int24(tick)
                     ),
-                    Arrays.asList(
-                            new TypeReference<Uint160>() {}
+                    List.of(
+                            new TypeReference<Uint160>() {
+                            }
                     )
             );
             List<Type> getSqrtRatioAtTickResponse = EthereumRPCHandler.ethCallAtLatestBlock(addressTickMathExternal, getSqrtRatioAtTick);
@@ -204,7 +206,7 @@ public class Vault extends BotCommand {
         EmbedBuilder eb = new EmbedBuilder();
 
         if(isUserRatelimited(event.getUser().getIdLong())) {
-            eb.setDescription("You are still rate limited. Expires in " + ((long) ratelimitMap.get(event.getUser().getIdLong()) - Instant.now().getEpochSecond()) + " seconds.");
+            eb.setDescription("You are still rate limited. Expires in " + (ratelimitMap.get(event.getUser().getIdLong()) - Instant.now().getEpochSecond()) + " seconds.");
             return eb.build();
         }
 
@@ -214,7 +216,7 @@ public class Vault extends BotCommand {
         List<Type> tickOfoSQTHPoolResponse;
         List<Type> uniswapv3NftResponse;
         Function callVaults = new Function("vaults",
-                Arrays.asList(
+                List.of(
                         new Uint256(event.getOptions().get(0).getAsLong())
                 ),
                 Arrays.asList(
@@ -232,8 +234,9 @@ public class Vault extends BotCommand {
                         new Uint32(1),
                         new org.web3j.abi.datatypes.Bool(true)
                 ),
-                Arrays.asList(
-                        new TypeReference<Uint256>() { }
+                List.of(
+                        new TypeReference<Uint256>() {
+                        }
                 )
         );
         Function callUniswapv3Tick = new Function("getTimeWeightedAverageTickSafe",
@@ -241,14 +244,18 @@ public class Vault extends BotCommand {
                         new org.web3j.abi.datatypes.Address("0x82c427AdFDf2d245Ec51D8046b41c4ee87F0d29C"),
                         new Uint32(1)
                 ),
-                Arrays.asList(
-                        new TypeReference<Int24>() { }
+                List.of(
+                        new TypeReference<Int24>() {
+                        }
                 )
         );
 
         String address;
         BigInteger nftCollateralId;
         BigInteger collateral;
+        BigInteger nftTickLower = BigInteger.ZERO;
+        BigInteger nftTickUpper = BigInteger.ZERO;
+        BigInteger nftCurrentTick = BigInteger.ZERO;
         BigInteger nftEthValue = BigInteger.ZERO;
         BigInteger nftEthLocked = BigInteger.ZERO;
         BigInteger nftOsqthLocked = BigInteger.ZERO;
@@ -271,7 +278,7 @@ public class Vault extends BotCommand {
 
             if(!nftCollateralId.equals(BigInteger.ZERO)) {
                 Function callUniswapv3NftPositions = new Function("positions",
-                        Arrays.asList(
+                        List.of(
                                 new Uint256(nftCollateralId)
                         ),
                         Arrays.asList(
@@ -301,6 +308,9 @@ public class Vault extends BotCommand {
                         (BigInteger) uniswapv3NftResponse.get(7).getValue()
                 );
 
+                nftTickLower = (BigInteger) uniswapv3NftResponse.get(5).getValue();
+                nftTickUpper = (BigInteger) uniswapv3NftResponse.get(6).getValue();
+                nftCurrentTick = (BigInteger) tickOfoSQTHPoolResponse.get(0).getValue();
                 nftEthLocked = amounts.amount0;
                 nftOsqthLocked = amounts.amount1;
 
@@ -327,7 +337,26 @@ public class Vault extends BotCommand {
 
         eb.setTitle("Short Vault Data - Vault " + event.getOptions().get(0).getAsLong());
         eb.addField("Operator", "[" + address + "](https://etherscan.io/address/" + address + ")", false);
-        eb.addField("NFT Collateral ID", "[" + nftCollateralId + "](https://etherscan.io/token/0xC36442b4a4522E871399CD717aBDD847Ab11FE88?a=" + nftCollateralId + ")", false);
+        if(nftCollateralId.doubleValue() != 0) {
+            double tickLower = nftTickLower.doubleValue() / Math.pow(10,18), tickUpper = nftTickUpper.doubleValue() / Math.pow(10,18), currentTick = nftCurrentTick.doubleValue() / Math.pow(10,18);
+            double difference = tickUpper - tickLower;
+
+            double ethPercentage, osqthPercentage;
+
+            osqthPercentage = ((tickLower - currentTick) / -(difference)) * 100;
+            ethPercentage = 100 - osqthPercentage;
+
+            if(osqthPercentage > 100) {
+                osqthPercentage = 100;
+                ethPercentage = 0;
+            } else if(ethPercentage > 100) {
+                ethPercentage = 100;
+                osqthPercentage = 0;
+            }
+
+            eb.addField("NFT Collateral ID", "[" + nftCollateralId + "](https://etherscan.io/token/0xC36442b4a4522E871399CD717aBDD847Ab11FE88?a=" + nftCollateralId + ")", false);
+            eb.addField("NFT Collateral Mixture", instance.format(nftEthLocked.doubleValue() / Math.pow(10,18)) + " Ξ (" + instance.format(ethPercentage) + "%) + " + instance.format(nftOsqthLocked.doubleValue() / Math.pow(10,18)) + " oSQTH (" + instance.format(osqthPercentage) + "%)", false);
+        }
         eb.addField("Collateral", instance.format(collateral.doubleValue() / Math.pow(10,18)) + " Ξ " + (nftEthValue.compareTo(BigInteger.ZERO) == 0 ? "" : "(+" + instance.format(nftEthValue.doubleValue() / Math.pow(10,18)) + " Ξ from NFT collateral)"), false);
         eb.addField("Short Amount", instance.format(shortAmount.doubleValue() / Math.pow(10,18)) + " oSQTH", false);
         eb.addField("Collateral Ratio", instance.format(cr) + "%", false);
